[tool.poetry]
name = "barber-customer-service-crew"
version = "0.1.0"
description = "AI-powered customer service system for barber shops using CrewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.13"
crewai = "^0.80.0"
crewai-tools = "^0.12.1"
langchain-openai = "^0.2.8"
openai = "^1.54.3"
python-dotenv = "^1.0.0"
pydantic = "^2.9.2"
langchain = "^0.3.7"
langchain-core = "^0.3.15"
langchain-community = "^0.3.7"
twilio = "^8.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
flake8 = "^6.0.0"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes